[metadata]
license_files = LICENSE
name = cipherx
version = attr:cipherx.version
description = A simple package to encrypt and decrypt files.
long_description = file:README.md
long_description_content_type = text/markdown
author = Arpit Omprakash
author_email = omprakasharpit@gmail.com
license = MIT
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Cryptography :: Cipher Tools
    Operating System :: OS Independent
platforms = any
